Bug 280826 - Plasma Shell crush after the mobile boardband connection stoping
Summary: Plasma Shell crush after the mobile boardband connection stoping
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 280963 281057 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-26 10:10 UTC by Luigi Joseph Del Giacco
Modified: 2011-08-30 16:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In: nm08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Joseph Del Giacco 2011-08-26 10:10:03 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.00 (4.7.0)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
Plasma Shell crush after the mobile boardband connection stop

The crash can be reproduced some of the time.

-- Backtrace:
Application: Shell del desktop di Plasma (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f32d519f7a0 (LWP 1811))]

Thread 4 (Thread 0x7f32ae39a700 (LWP 1852)):
#0  0x00007f32c94be07b in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f32c94bef9d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f32c94bf639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f32d1cab446 in QEventDispatcherGlib::processEvents (this=0x1e34ea0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f32d1c7f882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f32d1c7fabc in QEventLoop::exec (this=0x7f32ae399db0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f32d1b96924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f32d1c61c2f in QInotifyFileSystemWatcherEngine::run (this=0x1e32d20) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f32d1b99175 in QThreadPrivate::start (arg=0x1e32d20) at thread/qthread_unix.cpp:320
#9  0x00007f32c9fc6d8c in start_thread (arg=0x7f32ae39a700) at pthread_create.c:304
#10 0x00007f32d4a9c04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f32acb52700 (LWP 1853)):
#0  0x00007f32d4a8ef03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f32c94bf104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f32c94bf639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f32d1cab446 in QEventDispatcherGlib::processEvents (this=0x1fe52d0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f32d1c7f882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f32d1c7fabc in QEventLoop::exec (this=0x7f32acb51db0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f32d1b96924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f32d1c61c2f in QInotifyFileSystemWatcherEngine::run (this=0x1fe4390) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f32d1b99175 in QThreadPrivate::start (arg=0x1fe4390) at thread/qthread_unix.cpp:320
#9  0x00007f32c9fc6d8c in start_thread (arg=0x7f32acb52700) at pthread_create.c:304
#10 0x00007f32d4a9c04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f32a1d7e700 (LWP 1863)):
#0  0x00007f32d4a8ef03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f32c94bf104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f32c94bf9f2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f32a2e95c44 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f32c94e63e4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f32c9fc6d8c in start_thread (arg=0x7f32a1d7e700) at pthread_create.c:304
#6  0x00007f32d4a9c04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f32d519f7a0 (LWP 1811)):
[KCrash Handler]
#6  InterfaceDetailsWidget::handleConnectionStateChange (this=0x20c9350, new_state=3, old_state=<value optimized out>, reason=<value optimized out>) at ../../applet/interfacedetailswidget.cpp:514
#7  0x00007f32ac12af39 in InterfaceDetailsWidget::qt_metacall (this=0x20c9350, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e8570) at moc_interfacedetailswidget.cpp:107
#8  0x00007f32d1c955f8 in QMetaObject::activate (sender=0x33f40b0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffeb2e8570) at kernel/qobject.cpp:3287
#9  0x00007f32a6941dfd in Solid::Control::NetworkInterface::connectionStateChanged (this=<value optimized out>, _t1=3, _t2=9, _t3=0) at ./networkinterface.moc:159
#10 0x00007f32a6941e70 in Solid::Control::NetworkInterface::qt_metacall (this=0x33f40b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e86f0) at ./networkinterface.moc:127
#11 0x00007f32a693b420 in Solid::Control::SerialNetworkInterface::qt_metacall (this=0x33f40b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e86f0) at moc_networkserialinterface.cpp:72
#12 0x00007f32a693b4b0 in Solid::Control::GsmNetworkInterface::qt_metacall (this=0x33f40b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e86f0) at moc_networkgsminterface.cpp:68
#13 0x00007f32d1c955f8 in QMetaObject::activate (sender=0x3627460, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffeb2e86f0) at kernel/qobject.cpp:3287
#14 0x00007f32a6282aed in NMNetworkInterface::connectionStateChanged (this=<value optimized out>, _t1=3, _t2=9, _t3=0) at ./networkinterface.moc:190
#15 0x00007f32a6283a7e in NMNetworkInterface::qt_metacall (this=0x3627460, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffeb2e8920) at ./networkinterface.moc:124
#16 0x00007f32a6289ea0 in NMSerialNetworkInterface::qt_metacall (this=0x3627460, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e8920) at ./networkserialinterface.moc:72
#17 0x00007f32a628ab90 in NMGsmNetworkInterface::qt_metacall (this=0x3627460, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb2e8920) at ./networkgsminterface.moc:74
#18 0x00007f32d1c955f8 in QMetaObject::activate (sender=0x3705518, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffeb2e8920) at kernel/qobject.cpp:3287
#19 0x00007f32a628dc9a in OrgFreedesktopNetworkManagerDeviceInterface::StateChanged (this=<value optimized out>, _t1=3, _t2=9, _t3=0) at ./nm-deviceinterface.moc:147
#20 0x00007f32a628dcf7 in OrgFreedesktopNetworkManagerDeviceInterface::qt_metacall (this=0x3705518, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffeb2e8cb0) at ./nm-deviceinterface.moc:98
#21 0x00007f32d1fd59fa in QDBusConnectionPrivate::deliverCall (this=0x1763240, object=0x3705518, msg=..., metaTypes=..., slotIdx=5) at qdbusintegrator.cpp:942
#22 0x00007f32d1fdfe4f in QDBusCallDeliveryEvent::placeMetaCall (this=<value optimized out>, object=<value optimized out>) at qdbusintegrator_p.h:103
#23 0x00007f32d1c9449a in QObject::event (this=0x3705518, e=<value optimized out>) at kernel/qobject.cpp:1226
#24 0x00007f32d103d9f4 in QApplicationPrivate::notify_helper (this=0x1653df0, receiver=0x3705518, e=0x342f3a0) at kernel/qapplication.cpp:4462
#25 0x00007f32d10423ba in QApplication::notify (this=<value optimized out>, receiver=0x3705518, e=0x342f3a0) at kernel/qapplication.cpp:4341
#26 0x00007f32d2920796 in KApplication::notify (this=0x16417e0, receiver=0x3705518, event=0x342f3a0) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x00007f32d1c8049c in QCoreApplication::notifyInternal (this=0x16417e0, receiver=0x3705518, event=0x342f3a0) at kernel/qcoreapplication.cpp:731
#28 0x00007f32d1c83c25 in sendEvent (receiver=0x0, event_type=0, data=0x15b2b00) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x15b2b00) at kernel/qcoreapplication.cpp:1372
#30 0x00007f32d1cab253 in sendPostedEvents (s=0x1651e90) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#31 postEventSourceDispatch (s=0x1651e90) at kernel/qeventdispatcher_glib.cpp:277
#32 0x00007f32c94bebcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f32c94bf3a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f32c94bf639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007f32d1cab3ef in QEventDispatcherGlib::processEvents (this=0x15b22e0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#36 0x00007f32d10e74de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#37 0x00007f32d1c7f882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#38 0x00007f32d1c7fabc in QEventLoop::exec (this=0x7fffeb2e9690, flags=...) at kernel/qeventloop.cpp:201
#39 0x00007f32d1c83ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#40 0x00007f32d4d8a9dc in kdemain (argc=1, argv=0x7fffeb2e9a98) at ../../../../plasma/desktop/shell/main.cpp:120
#41 0x00007f32d49d4eff in __libc_start_main (main=0x400740 <main(int, char**)>, argc=1, ubp_av=0x7fffeb2e9a98, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7fffeb2e9a88) at libc-start.c:226
#42 0x0000000000400669 in _start ()

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-08-26 12:47:52 UTC
I think you are using a very old snapshot of Plasma NM. What is the Plasma NM's package version you use?
Comment 2 Lamarque V. Souza 2011-08-29 00:56:30 UTC
*** Bug 280963 has been marked as a duplicate of this bug. ***
Comment 3 Lamarque V. Souza 2011-08-29 01:47:26 UTC
Git commit 10491d7d279b510126b40b097566516112599d3c by Lamarque V. Souza.
Committed on 29/08/2011 at 03:44.
Pushed by lvsouza into branch 'master'.

Those parameters are not bit masks.

BUG: 280826
FIXED-IN: nm08

M  +4    -4    applet/interfacedetailswidget.cpp

http://commits.kde.org/networkmanagement/10491d7d279b510126b40b097566516112599d3c
Comment 4 Lamarque V. Souza 2011-08-30 16:35:09 UTC
*** Bug 281057 has been marked as a duplicate of this bug. ***