Those parameters are not bit masks.

BUG: 280826
FIXED-IN: nm08